[project]
name = "react_agent"
version = "0.1.0"
description = "React Agent for AI applications"
readme = "README.md"
license = "MIT"
authors = [{ name = "Bruno de Jesus Souza", email = "bsouza.sts@outlook.com" }]
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.14.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"




